Revert "given  task completed"
This reverts commit 0b8cc3d1869c3129beab64d1fc52413e8630ad05.