@@ -1,171 +1,98 @@
 package com.rental.service;
 
 import com.rental.dto.VehicleRequest;
+import com.rental.model.Booking;
 import com.rental.model.User;
 import com.rental.model.Vehicle;
-import com.rental.model.Vehiclebooked;
 import com.rental.repository.BookingRepository;
 import com.rental.repository.VehicleRepository;
-
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class VehicleService {
 
-    private VehicleRepository vehicleRepository;
+    private final VehicleRepository vehicleRepository;
+    private final BookingRepository bookingRepository;
+    private final AuthService       authService;
 
-    private BookingRepository bookingRepository;
-
-    private AuthService authService;
-
-    public VehicleService(VehicleRepository vehicleRepository,
-                          BookingRepository bookingRepository,
-                          AuthService authService) {
-
-        this.vehicleRepository = vehicleRepository;
-        this.bookingRepository = bookingRepository;
-        this.authService = authService;
-    }
-
-    public List<Vehicle> getVehicles(String type,
-                                     Boolean available,
-                                     LocalDate startDate,
-                                     LocalDate endDate) {
-
+    public List<Vehicle> getVehicles(String type, Boolean available, LocalDate startDate, LocalDate endDate) {
         User currentUser = authService.getCurrentUser();
-
-        Vehicle.VehicleType vehicleType = convertType(type);
-
+        Vehicle.VehicleType vehicleType = parseType(type);
         Long ownerId = null;
 
+        // If the logged-in user is a VEHICLE_OWNER, they only see their own vehicles
         if (currentUser.getRole() == User.Role.VEHICLE_OWNER) {
             ownerId = currentUser.getId();
         }
 
-        return vehicleRepository.getFilteredVehicles(
-                vehicleType,
-                available,
-                startDate,
-                endDate,
-                ownerId
-        );
+        return vehicleRepository.findFiltered(vehicleType, available, startDate, endDate, ownerId);
     }
 
     public Vehicle getVehicleById(Long id) {
-
         return vehicleRepository.findById(id)
-                .orElseThrow(() ->
-                        new RuntimeException("Vehicle not found"));
+                .orElseThrow(() -> new RuntimeException("Vehicle not found with id: " + id));
     }
 
     public Vehicle addVehicle(VehicleRequest request) {
-
         Vehicle vehicle = new Vehicle();
-
-        setVehicleData(vehicle, request);
-
+        applyRequest(vehicle, request);
         vehicle.setOwner(authService.getCurrentUser());
-
         return vehicleRepository.save(vehicle);
     }
 
     public Vehicle updateVehicle(Long id, VehicleRequest request) {
-
         Vehicle vehicle = getVehicleById(id);
-
         User currentUser = authService.getCurrentUser();
 
-        boolean isOwner =
-                vehicle.getOwner().getId().equals(currentUser.getId());
-
-        boolean isAdmin =
-                currentUser.getRole() == User.Role.SUPERADMIN;
-
-        if (!isOwner && !isAdmin) {
-            throw new RuntimeException("You cannot update this vehicle");
+        if (!vehicle.getOwner().getId().equals(currentUser.getId()) && !currentUser.getRole().equals(User.Role.SUPERADMIN)) {
+            throw new RuntimeException("You are not authorized to update this vehicle");
         }
 
-        setVehicleData(vehicle, request);
-
+        applyRequest(vehicle, request);
         return vehicleRepository.save(vehicle);
     }
 
     public void deleteVehicle(Long id) {
-
         Vehicle vehicle = getVehicleById(id);
-
         User currentUser = authService.getCurrentUser();
 
-        boolean isOwner =
-                vehicle.getOwner().getId().equals(currentUser.getId());
-
-        boolean isAdmin =
-                currentUser.getRole() == User.Role.SUPERADMIN;
-
-        if (!isOwner && !isAdmin) {
-            throw new RuntimeException("You cannot delete this vehicle");
+        if (!vehicle.getOwner().getId().equals(currentUser.getId()) && !currentUser.getRole().equals(User.Role.SUPERADMIN)) {
+            throw new RuntimeException("You are not authorized to delete this vehicle");
         }
 
-        boolean bookingExists =
-                bookingRepository.existsByVehicleIdAndStatus(
-                        id,
-                        Vehiclebooked.BookingStatus.CONFIRMED
-                );
-
-        if (bookingExists) {
-            throw new RuntimeException("Vehicle already booked");
+        // Restrict deletion of booked vehicles
+        if (bookingRepository.existsByVehicleIdAndStatus(id, Booking.BookingStatus.CONFIRMED)) {
+            throw new RuntimeException("Cannot delete vehicle with active confirmed bookings");
         }
 
         vehicleRepository.delete(vehicle);
     }
 
-    private void setVehicleData(Vehicle vehicle,
-                                VehicleRequest request) {
-
+    private void applyRequest(Vehicle vehicle, VehicleRequest request) {
         vehicle.setName(request.getName());
-
-        vehicle.setType(getVehicleType(request.getType()));
-
+        vehicle.setType(parseRequiredType(request.getType()));
         vehicle.setDescription(request.getDescription());
-
         vehicle.setPricePerDay(request.getPricePerDay());
-
-        if (request.getIsAvailable() != null) {
-            vehicle.setIsAvailable(request.getIsAvailable());
-        } else {
-            vehicle.setIsAvailable(true);
-        }
+        vehicle.setIsAvailable(request.getIsAvailable() != null ? request.getIsAvailable() : true);
     }
 
-    private Vehicle.VehicleType convertType(String type) {
-
-        if (type == null || type.trim().isEmpty()) {
+    private Vehicle.VehicleType parseType(String type) {
+        if (type == null || type.isBlank() || "ALL".equalsIgnoreCase(type)) {
             return null;
         }
-
-        if (type.equalsIgnoreCase("ALL")) {
-            return null;
-        }
-
-        return getVehicleType(type);
+        return parseRequiredType(type);
     }
 
-    private Vehicle.VehicleType getVehicleType(String type) {
-
+    private Vehicle.VehicleType parseRequiredType(String type) {
         try {
-
-            return Vehicle.VehicleType.valueOf(
-                    type.toUpperCase()
-            );
-
-        } catch (Exception e) {
-
-            throw new RuntimeException(
-                    "Type should be CAR or BIKE"
-            );
+            return Vehicle.VehicleType.valueOf(type.trim().toUpperCase());
+        } catch (IllegalArgumentException | NullPointerException ex) {
+            throw new RuntimeException("Vehicle type must be CAR or BIKE");
         }
     }
 }
